@@ -1,3 +1,9 @@
+2007-05-28  Al Riddoch  <alriddoch@zepler.org>
+
+	* skstream/skstream.cpp: It is not safe to assume the maximum
+	  path length of a unix socket is 108. On OSX it is 104. On some
+	  systems it is defined, on others we have to assume 104.
+
 2007-04-12  Al Riddoch  <alriddoch@zepler.org>
 
 	* configure.ac: Clean up the way debian/rules permissions are set so
